--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm test -- --coverage
   deploy:
     docker:
       - image: circleci/node:14
@@ -14,6 +13,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run build
+      - run: npm run deploy # assuming deploy script exists
 workflows:
   version: 2
   build-and-deploy:
