--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm run build
-      - run: npm run deploy # assuming deploy script exists
+      - run: npm start
 workflows:
   version: 2
   build-and-deploy:
